turned into PWA

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link style="transform: rotate(90deg)" rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link style="transform: rotate(90deg)" rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <!-- <link style="transform: rotate(90deg)" rel="icon" href="/favicon.ico"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AirDrop</title>
+    <meta name="description" content="Airdrop and Swappig Web3.0 application">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" type="image/svg+xml" href="/apple-touch-icon.png" sizes="180x180">
+    <!-- <link rel="mask-icon" type="image/svg+xml" href="/vite.svg" color="#000000"> -->
+    <link rel="mask-icon" href="/mask-icon.svg" color="#000">
+    <meta name="theme-color" content="#000000">
     <!-- <link href="/dist/output.css" rel="stylesheet"> -->
 </head>
 
